--- a/index.html
+++ b/index.html
@@ -48,10 +48,12 @@
 
       <nav class="nav-menu">
         <ul>
-          <li class="active"><a href="index.html"><i class="bx bx-home"></i> <span>Home</span></a></li>
-          <li><a href="#about"><i class="bx bx-user"></i> <span>About</span></a></li>
-          <li><a href="#resume"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
-          <li><a href="#contact"><i class="bx bx-envelope"></i> Contact</a></li>
+          <li class="active"><a href="#hero"><i class="bx bx-home bx-tada-hover"></i> <span>Home</span></a></li>
+          <li><a href="#about"><i class="bx bx-user bx-tada-hover"></i> <span>About</span></a></li>
+          <li><a href="#skills"><i class="bx bx-star bx-tada-hover"></i> <span>Skills</span></a></li>
+          <li><a href="#projects"><i class="bx bxs-diamond bx-tada-hover"></i> <span>Projects</span></a></li>
+          <li><a href="#resume"><i class="bx bx-file-blank bx-tada-hover"></i> <span>Resume</span></a></li>
+          <li><a href="#contact"><i class="bx bx-envelope bx-tada-hover"></i> Contact</a></li>
 
         </ul>
       </nav><!-- .nav-menu -->
@@ -177,6 +179,51 @@
       </div>
     </section><!-- End Skills Section -->
 
+
+    <!-- =======Projects Section ====== -->
+    <section id="projects" class="resume">
+          <div class="container">
+
+            <div class="section-title">
+              <h2>Projects</h2>
+              <!-- <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p> -->
+            </div>
+
+            <div class="row">
+              <div class="col-lg-6" data-aos="fade-up">
+
+                <div class="resume-item pb-0">
+                  <h4>Capstone Bloodhound</h4>
+                  <img class="img-fluid" src="assets\img\projects\Capstone Bloodhound_1.jpg" alt="" height="250" width="250">
+                  <p><em>A miniature ping-pong ball launcher</em></p>
+                  <ul>
+                    <li>Controlled using Arduino Mega</li>
+                    <li>Can be operated using the companion mobile app via Bluetooth</li>
+                    <li>Uses 2 high speed DC motors to launch the balls</li>
+                    <li>The balls were fed to the launcher using a servo motor</li>
+                  </ul>
+                </div>
+              </div>
+
+              <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
+                <div class="resume-item pb-0">
+                  <h4>Proxy</h4>
+                  <img class="img-fluid" src="assets\img\projects\proxy.jpeg" alt="" height="250" width="250">
+                  <p><em>A mimicking humanoid</em></p>
+                  <ul>
+                    <li>Controlled using Jetson Nano and Arduino Mega</li>
+                    <li>Uses pose detection to capture user movements</li>
+                    <li>Uses servo motors to move the arms</li>
+                  </ul>
+                </div>
+
+              </div>
+            </div>
+
+          </div>
+        </section>
+    <!-- End Projects Section -->
+
     <!-- ======= Resume Section ======= -->
     <section id="resume" class="resume">
       <div class="container">
@@ -219,7 +266,7 @@
 
         <div class="section-title">
           <h2>Contact</h2>
-          
+
         </div>
 
         <div class="row" data-aos="fade-in">
