--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
 
         <div class="row">
           <div class="col-lg-6" data-aos="fade-up">
-            <h3 class="resume-title">Sumary</h3>
+            <h3 class="resume-title">Summary</h3>
             <div class="resume-item pb-0">
               <h4>Poornaditya Mishra</h4>
               <p><em>Innovative person with out of the box thinking, always ready to take on new challenges and learn something new</em></p>
