--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
           <li class="active"><a href="#hero"><i class="bx bx-home bx-tada-hover"></i> <span>Home</span></a></li>
           <li><a href="#about"><i class="bx bx-user bx-tada-hover"></i> <span>About</span></a></li>
           <li><a href="#skills"><i class="bx bx-star bx-tada-hover"></i> <span>Skills</span></a></li>
+          <li><a href="#achievements"><i class="bx bx-medal bx-tada-hover"></i> <span>Achievements</span></a></li>
           <li><a href="#projects"><i class="bx bxs-diamond bx-tada-hover"></i> <span>Projects</span></a></li>
           <li><a href="#resume"><i class="bx bx-file-blank bx-tada-hover"></i> <span>Resume</span></a></li>
           <li><a href="#contact"><i class="bx bx-envelope bx-tada-hover"></i> Contact</a></li>
@@ -179,6 +180,34 @@
       </div>
     </section><!-- End Skills Section -->
 
+<!-- =======Achievements Section ====== -->
+
+    <section id="achievements" class="resume">
+      <div class="container">
+
+        <div class="section-title">
+          <h2>Achievements</h2>
+          <!-- <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p> -->
+        </div>
+
+        <div class="row">
+          <div class="col-lg-6" data-aos="fade-up">
+
+            <div class="resume-item pb-0">
+              <h4>3rd place in Devhack 2.0</h4>
+              <p><em>February 2020</em></p>
+              <ul>
+                <li>Devhack 2.0 was a national level hardware hackatthon organised by IIT-Dharwad</li>
+                <li>It was a 36 hour event, conducted on 15th and 16th February 2020</li>
+                <li>The project submitted by us was Proxy (can be seen in the <a href="#projects"><span>Projects</span></a></li> section below)</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </section>
+    <!-- End Achievements Section -->
 
     <!-- =======Projects Section ====== -->
     <section id="projects" class="resume">
