--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
     </section><!-- End Resume Section -->
 
     <!-- ======= Contact Section ======= -->
-    <section id="contact" class="contact">
+   <!- <section id="contact" class="contact">
       <div class="container">
 
         <div class="section-title">
@@ -352,7 +352,7 @@
 
         </div>
 
-      </div>
+      </div>  ->
     </section><!-- End Contact Section -->
 
   </main><!-- End #main -->
