--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 <ul>
                   <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 4 August 2000</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Website:</strong> www.poornaditya.github.io</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Age:</strong> 20</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Age:</strong> 21</li>
                 </ul>
               </div>
               <div class="col-lg-6">
@@ -194,6 +194,20 @@
           <div class="col-lg-6" data-aos="fade-up">
 
             <div class="resume-item pb-0">
+              <h4>1st prize in Smart India Hackathon 2021</h4>
+              <p><em>February 2021</em></p>
+              <ul>
+                <li>SIH is a nationa-wide hackathon organised by MHRD, Govt. of India</li>
+                <li>I was the leader of the team. The problem statement selected by us was AG53 given by Department of Scinetific and Industrial Research</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        
+        <div class="row">
+          <div class="col-lg-6" data-aos="fade-up">
+
+            <div class="resume-item pb-0">
               <h4>3rd place in Devhack 2.0</h4>
               <p><em>February 2020</em></p>
               <ul>
@@ -281,6 +295,7 @@
               <h4>Bachelor of Engineering</h4>
               <h5>2018 - 2022</h5>
               <p><em>KLE Technological University, Hubli, Karnataka</em></p>
+              <p>CGPA: 8.99</p>
               <p>Currently pursuing my Bachelor's degree in the field of Automation and Robotics</p>
             </div>
           </div>
