--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
             <h3 class="resume-title">Summary</h3>
             <div class="resume-item pb-0">
               <h4>Poornaditya Mishra</h4>
-              <p><em>Innovative person with out of the box thinking, always ready to take on new challenges and learn something new</em></p>
+              <p><em>Innovative person with out of the box thinking, always ready to take on new challenges and learn new technologies and concepts</em></p>
               <ul>
                 <li>Gorakhpur, Uttar Pradesh, India</li>
                 <li>poornadityamishra1@gmail.com</li>
